# kondate-agent

./: .gitignore  CLAUDE.md  README.md  index.html
.github/workflows/: terraform-apply.yml  terraform-plan.yml
.takt/workflows/: default.yaml
assets/: index-BH7tq8TD.js  index-Bqddiz4e.css  index-ILoc94_z.css  index-vj811Cpy.js
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/menu_suggester/: __init__.py  agent.py  schemas.py  tools.py
backend/app/routers/: health.py  recipes.py
backend/app/services/: elastic.py
data/: README.md  fetch_categories.py  fetch_recipes.py  fetch_sample.py  index_to_elastic.py  rakuten_client.py  requirements.txt
docs/: AGENT_DESIGN.md  AGENT_SCENARIOS.md  API_CONTRACT.md  ELASTIC_SCHEMA.md  PROGRESS.md  SETUP.md  SYSTEM_DESIGN.md  TECH_DECISIONS.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: InventorySection.tsx  MealsSection.tsx  NutritionSection.tsx  ReceiptSection.tsx  ShoppingSection.tsx
frontend/src/lib/: buildProposal.ts  categorize.ts  format.ts  reasoning.ts  toast.tsx  useCounter.ts  useUrlState.ts
frontend/src/mock/: inventory.ts  mealHistory.ts  recipes.ts  replyAgent.ts
infra/: README.md
infra/bootstrap/: .gitignore  main.tf  outputs.tf  variables.tf
infra/live/: apis.tf  billing.tf  main.tf  outputs.tf  service_accounts.tf  terraform.tfvars  variables.tf
