[project]
name = "kondate-agent-backend"
version = "0.1.0"
description = "献立提案エージェントの Cloud Run バックエンド (FastAPI + ADK + Vertex AI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "google-cloud-aiplatform>=1.71.0",
    "google-genai>=0.3.0",
    "google-adk>=0.1.0",
    "google-cloud-firestore>=2.19.0",
    "elasticsearch>=8.15.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
